--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,65 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Kara' 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.start-main {
+  background-color: #F5F7FB;
+}
+
+.yellow-bubble-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 21px;
+}
+
+.blue-bubble-container {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 66px;
+}
+
+.start-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.start-title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #293264;
+  margin-bottom: 0;
+}
+
+.start-text {
+  font-size : 1rem;
+  color: #293264;
+}
+
+.start-button {
+  font-family: -apple-system, BlinkMacSystemFont, 'Kara' 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    padding: 1rem 3rem;
+    background-color: #4D5B9E;
+    color: #F5F7FB;
+    border-radius: 15px;
+    border: none;
+}
+
+.start-button:active {
+  background-color: #293264;
 }
